deployment/dummyservice/dummyservice-destination-rule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service1
spec:
  host: service1
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service2
spec:
  host: service2
  subsets:
  - name: v1
    labels:
      version: v1
