deployment/dummyservice/dummyservice-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1
spec:
  hosts:
  - service1
  http:
  - route:
    - destination:
        host: service1
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service2
spec:
  hosts:
  - service2
  http:
  - route:
    - destination:
        host: service2
        subset: v1
